k8s/00-namespace-dev.yml
kind: Namespace  
apiVersion: v1  
metadata:  
 name: k8s-test-dev  
 labels:  
   name: k8s-test-dev
