k8s/00-namespace-prod.yml
kind: Namespace  
apiVersion: v1  
metadata:  
 name: k8s-test-prod
 labels:  
   name: k8s-test-prod
