k8s/03-todo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-service
  labels:
    app: k8s-test
    tier: backend
    type: data
spec:
  replicas: 2
  revisionHistoryLimit: 2
  minReadySeconds: 10
  selector:
    matchLabels:
      app: k8s-test
      tier: backend
      type: data
  template:
    metadata:
      labels:
        app: k8s-test
        tier: backend
        type: data
    spec:
      containers:
        - name: todo-service
          image: fabry/k8s-test-todo-service:1.1.4
          resources:
            limits:
              memory: 256M
              cpu: ".3"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 300
            timeoutSeconds: 30
            periodSeconds: 60
            failureThreshold: 2
