k8s/04-user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: k8s-test
    tier: backend
    type: service
spec:
  replicas: 2
  revisionHistoryLimit: 2
  minReadySeconds: 10
  selector:
    matchLabels:
      app: k8s-test
      tier: backend
      type: service
  template:
    metadata:
      labels:
        app: k8s-test
        tier: backend
        type: service
    spec:
      containers:
        - name: user-service
          image: fabry/k8s-test-user-service:1.1.3
          resources:
            limits:
              memory: 192M
              cpu: ".2"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 300
            timeoutSeconds: 5
            periodSeconds: 60
            failureThreshold: 1
