k8s/06-gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-service
  labels:
    app: k8s-test
    tier: backend
    type: api
spec:
  replicas: 2
  revisionHistoryLimit: 2
  minReadySeconds: 10
  selector:
    matchLabels:
      app: k8s-test
      tier: backend
      type: api
  template:
    metadata:
      labels:
        app: k8s-test
        tier: backend
        type: api
    spec:
      containers:
        - name: api-gateway-service
          image: fabry/k8s-test-api-gateway-service:1.1.3
          resources:
            limits:
              memory: 192M
              cpu: ".2"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 300
            timeoutSeconds: 5
            periodSeconds: 60
            failureThreshold: 1
