k8s/08-redis-slave-deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: redis-slave
  labels:
    app: k8s-test
    role: slave
    tier: backend
    type: db
spec:
  selector:
    matchLabels:
      app: k8s-test
      role: slave
      tier: backend
      type: db
  replicas: 2
  template:
    metadata:
      labels:
        app: k8s-test
        role: slave
        tier: backend
        type: db
    spec:
      containers:
        - name: slave
          image: gcr.io/google_samples/gb-redisslave:v3
          volumeMounts:
                - mountPath: /data
                  name: datadir
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
          - containerPort: 6379
      volumes:
        - name: datadir
          emptyDir: {}
