k8s/02-reverse-proxy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
  labels:
    app: k8s-test
    tier: service
    type: proxy
spec:
  type: NodePort
  selector:
    app: k8s-test
    tier: service
    type: proxy
  ports:
    - port: 8080
      targetPort: 8080
