k8s/03-todo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  labels:
    app: k8s-test
    tier: backend
    type: data
spec:
  type: ClusterIP
  selector:
    app: k8s-test
    tier: backend
    type: data
  ports:
    - port: 8080
      targetPort: 8080
