k8s/04-user-service.yml
apiVersion: v1
kind: Service
metadata:
   name: user-service
   labels:
        app: k8s-test
        tier: backend
        type: service
spec:
  type: ClusterIP
  selector: 
    app: k8s-test
    tier: backend
    type: service
  ports:
    - port: 8080
      targetPort: 8080
