k8s/06-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  labels:
    app: k8s-test
    tier: backend
    type: api
spec:
  type: ClusterIP
  selector:
    app: k8s-test
    tier: backend
    type: api
  ports:
    - port: 8080
      targetPort: 8080
