k8s/07-reverse-proxy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
  labels:
    app: k8s-test
    tier: service
    type: proxy
spec:
  type: ClusterIP
  selector:
    app: k8s-test
    tier: service
    type: proxy
  ports:
    - name: reverse-proxy-port
      port: 8080
      targetPort: 8080
