k8s/08-redis-master-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    app: k8s-test
    role: master
    tier: backend
    type: db    
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: k8s-test
    role: master
    tier: backend
    type: db
