k8s/08-redis-slave-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    app: k8s-test
    role: slave
    tier: backend
    type: db 
spec:
  ports:
  - port: 6379
  selector:
    app: k8s-test
    role: slave
    tier: backend
    type: db
